Fix margin bottom spacing hover link

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .link-underline {
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.2rem;
 		border-bottom-width: 0;
 		background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
 		background-size: 0 1px;
@@ -15,7 +15,7 @@
 
   
 	.link-underline:hover {
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.2rem;
     background-size: 100% 2px;
 		background-position: 50% 100%;
 	}
